Desktop version completed

--- a/index.html
+++ b/index.html
@@ -3,9 +3,134 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Лого за 40 000</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header_inner">
+          <div class="logo_box">
+            <img src="img/logo.png" alt="" class="logo">
+          </div>
+          <nav class="nav">
+            <ul class="nav_list">
+              <li class="nav_item">Главная</li>
+              <li class="nav_item">Услуги Акции</li>
+              <li class="nav_item">О Компании</li>
+              <li class="nav_item">Портфолио</li>
+            </ul>
+          </nav>
+
+          <div class="hamburger">
+            <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24px" height="24px"><path d="M 0 2 L 0 4 L 24 4 L 24 2 Z M 0 11 L 0 13 L 24 13 L 24 11 Z M 0 20 L 0 22 L 24 22 L 24 20 Z"/></svg>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <div class="banner_inner">
+              <img src="img/banner.png" alt="" class="banner_img">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="about_head">
+          <h1 class="about_heading">
+            <span class="about_heading_top">Глав<img src="img/glav-icon.png" alt=""></span>
+            <span class="about_heading_bottom">Бренд<span class="about_heading_deseign">Дизайн</span></span>
+          </h1>
+        </div>
+
+        <div class="about_text">
+          <p class="about_text_paragraph">Компания ГЛАВБРЕНД выполняла работы для студии Федора Бондарчука ART PICTURES, мы работаем с брендом VOLKSWAGEN, создали фирменный стиль для национальной компании СПК «Туркестан», авиакомпании Southern Sky, десятков заводов, фабрик и корпораций.</p>
+          <p class="about_text_paragraph">Однако для малого и среднего бизнеса зачастую масштабных дизайнерских разработок не 
+            требуется, поэтому мы решили представить особую услугу - быстрая, но при этом качественная разработка логотипов.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="about_banner">
+      <div class="container">
+        <div class="about_banner_inner">
+          <img src="img/about_logo.png" class="about_banner_img" alt="">
+          <div class="about_banner_price">
+            <img src="img/point.png" alt="">
+            <p class="about_banner_price_text">Всего за 40 000 тенге</p>
+            <img src="img/point.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="conditions">
+      <div class="container">
+        <div class="row">
+          <h2 class="conditions_heading col-md-8 offset-md-2">Условия акции</h2>
+          <p class="conditions_text col-md-10 offset-md-1">«Логотип за 4 дня» – это специальное предложение от профессионалов ГЛАВБРЕНД для малого и среднего бизнеса, перспективных и начинающих проектов.</p>
+        </div>
+
+        
+      <div class="conditions_work">
+
+            <img src="img/conditions.png" class="conditions_work_img" alt="">
+            <div class="container">
+              <div class="row">
+            <ul class="conditions_work_list offset-md-6 col-md-6">
+              <h2 class="conditions_work_heading">Порядок работы:</h2>
+              <li class="conditions_work_item">Заполняем и подписываем техзадание</li>
+              <li class="conditions_work_item">Производится оплата и типового договора</li>
+              <li class="conditions_work_item">Сдача 3 вариантов логотипа</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+        <div class="warning">
+          <p>***Важно! Предложенные нами варианты не обсуждаются, все их изменения платные.</p>
+          <p>***Важно! Предложенные нами варианты – сделаны профессионально творческой и опытной командой, потому изменений и не потребуется</p>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="portfolio">
+      <div class="container">
+        <div class="portfolio_inner">
+          <h2 class="portfolio_heading">Портфолио</h2>
+          <p class="portfolio_text">Звоните сегодня!</p>
+          <p class="portfolio_text">Работайте с новым лого уже через 4 дня!</p>
+          <img src="img/point.png" alt="" class="portfolio_start_icon">
+          <div class="gallery">
+            <img src="img/khan.jpg" alt="">
+            <img src="img/onmilk.jpg" alt="">
+            <img src="img/moscow.jpg" alt="">
+            <img class="last_gallery_img" src="img/build.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="portfolio_logos">
+      <div class="container">
+        <img src="img/portfolio_logos.png" alt="">
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p class="mail">glavbrend@inbox.ru</p>
+      <p>проспект Тауке Хана, 2 этаж</p>
+      <p>Аль-Фарабийский район, Шымкент, 160011</p>
+      <p><a href="tel:+77079352216" class="tel">+77079352216</a></p>
+    </footer>
+  </body>
 </html>
